(PC-17754)[PRO] fix: align button offer synchro

--- a/pro/src/components/pages/Offerers/Offerer/VenueV1/VenueEdition/VenueProvidersManagerV2/VenueProviderItemV2/VenueProviderItemV2.module.scss
+++ b/pro/src/components/pages/Offerers/Offerer/VenueV1/VenueEdition/VenueProvidersManagerV2/VenueProviderItemV2/VenueProviderItemV2.module.scss
@@ -21,7 +21,7 @@
       border-radius: rem.torem(6px);
       display: flex;
       flex-flow: row wrap;
-      padding: rem.torem(10px) rem.torem(20px);
+      padding: 0 rem.torem(20px);
 
       .provider-name {
         @include fonts.title4();
@@ -31,6 +31,8 @@
       }
 
       .provider-actions {
+        display: flex;
+        height: rem.torem(44px);
         .provider-action-button {
           padding: 0 rem.torem(4px);
         }
@@ -51,6 +53,7 @@
       span {
         color: colors.$black;
         font-weight: 500;
+        margin-top: rem.torem(8px);
       }
 
       .last-synchronisation {
@@ -72,7 +75,7 @@
       }
 
       div {
-        margin: rem.torem(16px) 0;
+        margin-top: rem.torem(8px);
       }
     }
   }
